2014-03-11  tino

	* [r9768] src/CMakeLists.txt: make test

2014-03-07  tino

	* [r9765] src/GrammarWriter.cpp: Remember subreadings and
	  static-tags in textual writer
	* [r9764] ChangeLog, TODO, scripts/cg3-autobin.pl,
	  src/GrammarApplicator.hpp,
	  src/GrammarApplicator_runContextualTest.cpp,
	  src/GrammarApplicator_runRules.cpp, src/version.hpp,
	  test/T_BasicDependency/grammar.cg3: Barriers now work for c*
	  tests

2014-03-06  unhammer

	* [r9763] emacs/cg.el: todo

2014-03-06  tino

	* [r9760] ChangeLog, manual/rules.xml, scripts/cg3-autobin.pl,
	  src/GrammarApplicator.cpp, src/GrammarApplicator.hpp,
	  src/GrammarApplicator_runGrammar.cpp,
	  src/GrammarApplicator_runRules.cpp, src/Rule.hpp,
	  src/SingleWindow.hpp, src/Strings.cpp, src/Strings.hpp,
	  src/Window.cpp, src/version.hpp, test/T_Variables/expected.txt,
	  test/T_Variables/input.txt: Set/RemVariable now optionally takes
	  OUTPUT to commit the changes to the stream.

2014-03-04  tino

	* [r9759] ChangeLog, TODO, manual/dependencies.xml,
	  scripts/cg3-autobin.pl, src/CMakeLists.txt,
	  src/CohortIterator.cpp, src/CohortIterator.hpp,
	  src/ContextualTest.hpp, src/GrammarApplicator.cpp,
	  src/GrammarApplicator.hpp,
	  src/GrammarApplicator_runContextualTest.cpp,
	  src/TextualParser.cpp, src/version.hpp,
	  test/T_BasicDependency/expected.txt,
	  test/T_BasicDependency/grammar.cg3: Implement ancestor search
	  with 'pp'; Made right/left operators work with p, *p, pp; CMake
	  bails out of Boost is older than 1.48.0

2014-02-18  tino

	* [r9709] newsletters/2014-02-18.txt: Newsletter
	* [r9708] ChangeLog, scripts/cg3-autobin.pl, src/version.hpp: CG-3
	  Release 0.9.8.9708

2014-02-17  tino

	* [r9707] src/BinaryGrammar_read.cpp, src/BinaryGrammar_write.cpp,
	  src/version.hpp: Track binary format separately from main
	  revision - remember to bump CG3_FEATURE_REV when adding a new
	  feature.

2014-02-12  tino

	* [r9705] CMakeLists.txt, ChangeLog, TODO, scripts/cg3-autobin.pl,